[gd_scene load_steps=2 format=3 uid="uid://lecqsa17yh3d"]

[ext_resource type="Script" path="res://src/ui.gd" id="1_14wuy"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_14wuy")

[node name="MoveTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="TimerBar" type="ProgressBar" parent="MoveTimer"]
unique_name_in_owner = true
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 133.0
offset_top = 86.0
offset_right = 365.0
offset_bottom = 113.0
grow_vertical = 2
rotation = -1.5708
size_flags_horizontal = 4
size_flags_vertical = 1
show_percentage = false

[node name="ScreenColor" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
